Update test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
         uses: danielpalme/ReportGenerator-GitHub-Action@4.7.1
         with:
-          reports: '${{ matrix.os }}.lcov.net8.0.info'
+          reports: '${{ matrix.os }}.lcov.info'
           targetdir: '.'
           reporttypes: 'Clover;HtmlSummary'
           tag: 'test_${{ github.run_number }}'
@@ -49,7 +49,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
         uses: danielpalme/ReportGenerator-GitHub-Action@4.7.1
         with:
-          reports: '${{ matrix.os }}.lcov.net8.0.info'
+          reports: '${{ matrix.os }}.lcov.info'
           targetdir: './cloverreport'
           reporttypes: 'Html'
           tag: 'test_${{ github.run_number }}'
@@ -59,7 +59,7 @@ jobs:
         with:
           name: Code coverage artifacts
           path: |
-            ${{ matrix.os }}.lcov.net8.0.info
+            ${{ matrix.os }}.lcov.info
             Clover.xml
             cloverreport/**
             summary.html
